// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Navigation component should not render desktop navigation if no visible links or label 1`] = `
<div
  className="navigation"
>
  <NavigationMobile
    accountButtonText="Account"
    onCloseMobileMenuHandler={[MockFunction]}
    showMobileAccountNav={true}
    signOutButtonText="Sign out"
    visibleNavLinks={Array []}
  />
</div>
`;

exports[`The Navigation component should render 1`] = `
<div
  className="navigation"
>
  <withRouter(NavigationDesktop)
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
  <NavigationMobile
    accountButtonText="Account"
    onCloseMobileMenuHandler={[MockFunction]}
    showMobileAccountNav={true}
    signOutButtonText="Sign out"
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
</div>
`;

exports[`The Navigation component should render navigation label 1`] = `
<div
  className="navigation"
>
  <withRouter(NavigationDesktop)
    navLabel="Nav Label"
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
  <NavigationMobile
    accountButtonText="Account"
    onCloseMobileMenuHandler={[MockFunction]}
    showMobileAccountNav={true}
    signOutButtonText="Sign out"
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
</div>
`;

exports[`The Navigation component should render when signed out 1`] = `
<div
  className="navigation"
>
  <withRouter(NavigationDesktop)
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
  <NavigationMobile
    accountButtonText="Account"
    onCloseMobileMenuHandler={[MockFunction]}
    showMobileAccountNav={true}
    signOutButtonText="Sign out"
    signedOut={true}
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
</div>
`;

exports[`The Navigation component should render without mobile account navigation 1`] = `
<div
  className="navigation"
>
  <withRouter(NavigationDesktop)
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
  <NavigationMobile
    accountButtonText="Account"
    onCloseMobileMenuHandler={[MockFunction]}
    showMobileAccountNav={false}
    signOutButtonText="Sign out"
    visibleNavLinks={
      Array [
        Object {
          "label": "Home",
          "path": "/home",
          "visible": true,
        },
      ]
    }
  />
</div>
`;
